--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -7,7 +7,9 @@ body {
   font-family: 'SFUIText', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(180deg, #E6D4DE 0%, #9890C7 100%);
+  height: 100vh;
+  width: 100vw;
+  min-width: 320px;
+  overflow-x: hidden;
 }
-
-
-
