--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -1,6 +1,3 @@
-$blue: #21268F;
-$pink: #EBE0E9;
-$red: #F1453D;
-$lavender: #ECECF9;
-$light-gray: #D7D8EF;
-$black: #2D2E46;
+$blue: #366EFF;
+$bg: #F9F9FA;
+$text: rgba(0, 0, 0, .5);
