--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -122,3 +122,21 @@
   justify-content: space-between;
   box-shadow: 0px 2px 10px rgba(109, 109, 109, 0.25), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
+
+.frame {
+  background: #FFFFFF;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 35px 30px;
+  max-width: 420px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.title {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 27px;
+  color: black;
+  text-align: center;
+}
