--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -51,8 +51,12 @@
   position: relative;
   height: 40px;
   width: max-content;
+  width: 100%;
+  margin-bottom: 25px;
 
   &__field {
+    position: relative;
+    z-index: 1;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
@@ -75,7 +79,17 @@
 
     &:focus+.input__label {
       color: $blue;
-      transform: translate(0px, 0px) scale(0.65);
+      transform: translate(0px, -5px) scale(0.75);
+    }
+
+    &:-webkit-autofill {
+      -webkit-text-fill-color: black;
+      box-shadow: inset 0 0 0 50px white;
+    }
+
+    &:-webkit-autofill+.input__label {
+      color: $blue;
+      transform: translate(0px, -5px) scale(0.75);
     }
   }
 
@@ -91,13 +105,35 @@
     text-overflow: ellipsis;
     max-width: 100%;
     position: absolute;
+    z-index: 0;
     left: 0;
     top: 0;
     transform: translate(0px, 17px) scale(1);
     transition: all .2s ease-in-out;
 
     &--filed {
-      transform: translate(0px, 0px) scale(0.65);
+      transform: translate(0px, -5px) scale(0.75);
+    }
+  }
+
+  &__icon {
+    width: 24px;
+    height: 24px;
+    background-color: black;
+    mask-repeat: no-repeat;
+    mask-size: cover;
+    mask-position: center center;
+    mask-image: url('../img/eye.svg');
+    cursor: pointer;
+    position: absolute;
+    top: 12px;
+    right: 0;
+    cursor: pointer;
+    z-index: 2;
+    transition: background-color .2s ease-in-out;
+
+    &--active {
+      background-color: $blue;
     }
   }
 }
@@ -139,4 +175,29 @@
   line-height: 27px;
   color: black;
   text-align: center;
+  margin-bottom: 40px;
+}
+
+.form {
+  &__text {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    color: $text;
+    margin-top: 30px;
+    margin-bottom: 7px;
+    text-align: center;
+  }
+
+  &__link {
+    width: max-content;
+    margin: 0 auto;
+    display: block;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: $blue;
+    text-decoration: underline;
+    text-align: center;
+  }
 }
