--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -156,6 +156,35 @@
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
   padding: 9px 50px;
   box-shadow: 0px 4px 18px rgba(54, 110, 255, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url('../img/load-btn.svg');
+    opacity: 0;
+  }
+
+  &:disabled {
+    pointer-events: none;
+    color: transparent;
+    text-shadow: none;
+
+    &::after {
+      opacity: 1;
+    }
+  }
+
+  &--registration {
+    width: 100%;
+    text-align: center;
+    margin-top: 33px;
+  }
 }
 
 .header {
@@ -183,7 +212,9 @@
   margin-bottom: 40px;
 }
 
-.form {
+.form {}
+
+.registration {
   &__text {
     font-weight: 600;
     font-size: 14px;
@@ -204,5 +235,12 @@
     color: $blue;
     text-decoration: underline;
     text-align: center;
+  }
+
+  &__img {
+    width: 108px;
+    height: 108px;
+    margin: 0 auto 31px;
+    background-image: url('../img/mail.svg');
   }
 }
