--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -231,8 +231,9 @@
 }
 
 .header {
+  position: relative;
+  z-index: 3;
   padding: 10px 0;
-  justify-content: space-between;
   box-shadow: 0px 2px 10px rgba(109, 109, 109, 0.25), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
 
@@ -301,9 +302,11 @@
     text-decoration: none;
     text-align: center;
   }
-  &__checkbox  {
+
+  &__checkbox {
     margin-left: 55%;
   }
+
   &__text {
     margin-top: 30px;
     margin-bottom: 7px;
@@ -313,6 +316,7 @@
     color: $text;
     text-align: center;
   }
+
   &__link {
     width: max-content;
     margin: 0 auto;
@@ -360,12 +364,146 @@
   display: inline-flex;
 
   &__name {
-  font-weight: 600;
+    font-weight: 600;
     margin-right: 10px;
   }
 
   &__avatar {
     width: 36px;
     height: 36px;
+  }
+}
+
+.cards {
+  &__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
+
+  &__title {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    color: black;
+  }
+
+  &__menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+  }
+}
+
+.packs {
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(-1px -1px 2px rgba(0, 0, 0, 0.1));
+  background-color: white;
+
+  &__captions {
+    background: #EFEFEF;
+    padding: 15px 35px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  &__caption {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
+.pack {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  padding: 15px 35px;
+  border: 1px solid #D9D9D9;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+
+  &:last-child {
+    border: none;
+  }
+}
+
+.filter {
+  margin-right: 20px;
+  &__title {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 8px;
+  }
+
+  &__buttons {
+    display: flex;
+  }
+
+  &__button {
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+
+    &--blue {
+      background-color: $blue;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: white;
+      margin-left: -2px;
+      border-bottom-right-radius: 2px;
+      border-top-right-radius: 2px;
+    }
+
+    &--light {
+      background-color: white;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: black;
+      border-left: 1px solid #D9D9D9;
+      border-top: 1px solid #D9D9D9;
+      border-bottom: 1px solid #D9D9D9;
+      border-bottom-left-radius: 2px;
+      border-top-left-radius: 2px;
+    }
+  }
+}
+
+.search {
+  max-width: 460px;
+  width: 100%;
+  margin-right: 20px;
+
+  &__title {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 8px;
+  }
+
+  &__input {
+    height: 36px;
+    width: 100%;
+    border: 1px solid #D9D9D9;
+    border-radius: 2px;
+    padding: 0 20px 0 40px;
+    outline: none;
+    transition: border-color .2s ease-in-out;
+    &:focus {
+      border: 1px solid $blue;
+    }
+
+    &::placeholder {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 24px;
+      color: rgba(0, 0, 0, .5);
+    }
   }
 }
