--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -419,7 +419,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   padding: 15px 35px;
-  border: 1px solid #D9D9D9;
+  border-bottom: 1px solid #D9D9D9;
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
@@ -431,6 +431,7 @@
 
 .filter {
   margin-right: 20px;
+
   &__title {
     font-weight: 500;
     font-size: 14px;
@@ -480,6 +481,23 @@
   width: 100%;
   margin-right: 20px;
 
+  &__label {
+    position: relative;
+
+    &:before {
+      content: '';
+      width: 15px;
+      height: 15px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 17px;
+      background-image: url('../img/search.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  }
+
   &__title {
     font-weight: 500;
     font-size: 14px;
@@ -495,6 +513,7 @@
     padding: 0 20px 0 40px;
     outline: none;
     transition: border-color .2s ease-in-out;
+
     &:focus {
       border: 1px solid $blue;
     }
