--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -7,4 +7,5 @@ body {
   font-family: 'SFUIText', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $bg;
 }
