--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,17 +19,12 @@
 
 .app {
   width: 100vw;
-  height: 100vh;
   overflow: hidden;
 }
 
 .content {
   padding: 60px 0;
-  background-color: $bg;
-  width: 100%;
-  height: 100%;
 }
-
 
 .container {
   max-width: 1470px;
@@ -92,6 +87,7 @@
     }
 
     &:-webkit-autofill + .input__label {
+      transition: all 0s ease-in-out;
       color: $blue;
       transform: translate(0px, -5px) scale(0.75);
     }
@@ -405,6 +401,8 @@
     padding: 15px 35px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+    border-bottom: 1px solid #D9D9D9;
   }
 
   &__caption {
@@ -417,11 +415,17 @@
 .pack {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  gap: 0 20px;
   padding: 15px 35px;
   border-bottom: 1px solid #D9D9D9;
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
+  transition: background-color .2s ease-in-out;
+  cursor: pointer;
+  &:hover {
+    background-color: #f8f7f7;
+  }
 
   &:last-child {
     border: none;
