--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -423,6 +423,7 @@
   line-height: 16px;
   transition: background-color .2s ease-in-out;
   cursor: pointer;
+  align-items: center;
   &:hover {
     background-color: #f8f7f7;
   }
@@ -430,6 +431,7 @@
   &:last-child {
     border: none;
   }
+
 }
 
 .filter {
