--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,7 +1,7 @@
-@import '../style/fonts';
-@import '../style/reset';
-@import '../style/vars';
-@import '../style/main';
+@import 'fonts';
+@import 'reset';
+@import 'vars';
+@import 'main';
 
 body {
   font-family: 'SFUIText', sans-serif;
