--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -409,7 +409,13 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
+    display: flex;
+    align-items: center;
+    &--lastUpdate {
+      cursor: pointer;
+    }
   }
+
 }
 
 .pack {
