--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -406,6 +406,8 @@
   }
 
   &__caption {
+    display: flex;
+    align-items: center;
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
