--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -223,6 +223,15 @@
     text-align: center;
     margin-top: 33px;
   }
+  &--cancel {
+    padding: 9px 40px;
+    background-color: $white;
+    color: #000000;
+  }
+  &--delete {
+    padding: 9px 40px;
+    background-color: $red;
+  }
 
 }
 
@@ -253,6 +262,10 @@
 }
 
 .form {
+  &__modal {
+    margin-top: 40px;
+
+  }
 }
 
 .registration {
@@ -580,5 +593,37 @@
 
   &__text {
     margin-bottom: 30px;
+  }
+}
+
+.modals {
+
+  &__title {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 600;
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+  &__hr {
+    position: absolute;
+    width: 400px;
+    height: 1px;
+    top: 60px;
+    left: 0;
+    background-color: #F0FFFF;
+    opacity: 0.5;
+  }
+  &__deleteMessage {
+    margin-top: 40px;
+  }
+}
+
+.submit {
+  margin-top: 36px;
+  display: flex;
+  justify-content: center;
+  &__modals {
+    justify-content: space-between;
   }
 }
