feat: add sort by cardsCount

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -424,9 +424,8 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
-    display: flex;
-    align-items: center;
-    &--lastUpdate {
+
+    &--sorting {
       cursor: pointer;
     }
   }
