feat: add empty search and fix my\all

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -643,3 +643,12 @@
     justify-content: space-between;
   }
 }
+
+.empty {
+  margin-top: 80px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 27px;
+  color: black;
+}
