--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -514,7 +514,9 @@
   }
 }
 
+
 .slider {
+  width: 450px;
   &__title {
     font-weight: 500;
     font-size: 14px;
@@ -525,6 +527,16 @@
   &__items {
     display: flex;
     align-items: center;
+  }
+
+  &__input {
+    width: 35px;
+    height: 35px;
+    margin: 0 20px;
+    text-align: center;
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    border-radius: 2px;
   }
 
   &__min {
@@ -655,4 +667,17 @@
 .loadingBar {
   opacity: 0;
   height: 4px;
+}
+
+//hide input arrows
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
