--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -403,7 +403,7 @@
   &__menu {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     margin-bottom: 25px;
   }
 
@@ -413,6 +413,13 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+  }
+  &__filter {
+    background: #FFFFFF;
+    border: 1px solid #E8E8E8;
+    border-radius: 2px;
+    width: 40px;
+    height: 40px;
   }
 
 }
@@ -530,8 +537,8 @@
   }
 
   &__input {
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     margin: 0 20px;
     text-align: center;
     background: #FFFFFF;
