feat: fix ellipsis, edit mode, actions

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -727,3 +727,8 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.cut {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
